# type3-clipboard-codec

./: .gitignore  README.md  pyproject.toml  verify_skeleton.py
docs/: architecture.md  contour_candidate_selection_rfc.md  format_notes.md  geometry_fixture_plan.md  geometry_parser_structure_audit.md  parser_structure_audit.md  reverse_engineering_log.md  text_object_reverse_engineering.md  text_reverse_engineering.md
src/type3_clipboard_codec/: __init__.py  exceptions.py
src/type3_clipboard_codec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: sample_utils.py
tests/integration/: test_arc_parsing.py  test_circle_parsing.py  test_contour_candidate_competition_cli.py  test_contour_candidate_ranking_diagnostics.py  test_contour_header_diagnostics.py  test_contour_header_report_cli.py  test_contour_refined_selection.py  test_contour_selection_shadow_diff_cli.py  test_multi_object.py  (+30 more)
tools/: analyze_contour_candidate_competition.py  analyze_contour_tag_role_evidence.py  analyze_cparagraphe_field_candidates.py  analyze_cparagraphe_records.py  analyze_cparagraphe_structure.py  analyze_polygon_candidate_evidence.py  analyze_text_anchor_field_candidates.py  analyze_text_color_diff.py  compare_contour_shape_evidence.py  compare_group_samples.py  compare_text_color_samples.py  compare_text_font_samples.py  inspect_clipboard_hex.py  inspect_file.py  inspect_manual_hex.py  report_contour_header_candidates.py  report_contour_selection_shadow_diff.py  report_cparagraphe_field_validation.py  text_fixture_inventory.py  validate_cparagraphe_field_offsets.py
(+136 files in other folders)
