[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "type3_clipboard_codec"
version = "0.1.0"
description = "TYPE3 Edit 클립보드 데이터 코덱 및 분석 라이브러리"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Engineering Team" },
]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
